fix: update package name to correct scope @iskala00
- Fix package name from @iskala/graphql-react to @iskala00/graphql-react
- Update all documentation references
- Ensure proper npm publishing scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@iskala/graphql-react",
+  "name": "@iskala00/graphql-react",
   "version": "1.0.3",
   "description": "GraphQL loader and template literal tag for React with Vite, Next.js, webpack and turbopack support",
   "type": "module",
