feat: enhance README with badges and quick start section
- Add npm version, downloads, license, and GitHub stars badges
- Add quick start section for immediate usage
- Improve package.json with better keywords and metadata
- Add repository, bugs, and homepage URLs
- Optimize for better discoverability and star attraction
- Add call-to-action for GitHub stars

--- a/package.json
+++ b/package.json
@@ -43,9 +43,31 @@
     "nextjs",
     "webpack",
     "turbopack",
-    "esm"
+    "esm",
+    "loader",
+    "apollo-client",
+    "urql",
+    "typescript",
+    "modern",
+    "fast",
+    "zero-dependencies",
+    "tree-shaking",
+    "gql",
+    "graphql-loader"
   ],
-  "author": "",
+  "author": {
+    "name": "iskala00",
+    "email": "iskala00@mail.ru",
+    "url": "https://github.com/iskala00"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iskala00/graphql-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iskala00/graphql-react/issues"
+  },
+  "homepage": "https://github.com/iskala00/graphql-react#readme",
   "license": "MIT",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
